10-sample-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-deployment-kose
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
        - name: hello-apache
          image: nkoseki/hello-apache
          ports:
            - containerPort: 80
