my-pod-ubuntu20.04.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod-ubuntu2004
spec:
  containers:
    - name: my-ubuntu-container
#      image: ubuntu:20.04
      image: nkoseki/ubuntu2004:v1.0
      #image: nkoseki/ubuntu18:v01 # containerのimage
      # docker.ioに見にいってエラーになる場合、ローカルのimageを見るようにする
      imagePullPolicy: IfNotPresent
      command:  # これをつけないと、CrashLoopBackOffになる
        - sleep
        - infinity

#  dnsPolicy: "None"
#  dnsConfig:
#    nameservers:
#      - 8.8.8.8
