20-sample-lb-fixip.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sample-lb
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.56.10
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 8080
      targetPort: 80
# これをコメントアウトすると、自動でIPが割り当てられる
      nodePort: 30090
  selector:
    app: sample-app
