30-sample-ingress-apps.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sample-ingress-svc-1
spec:
  type: NodePort
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 8888
      targetPort: 80
      nodePort: 30081
  selector:
    ingress-app: sample1

---
apiVersion: v1
kind: Service
metadata:
  name: sample-ingress-svc-2
spec:
  type: NodePort
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 8888
      targetPort: 80
      nodePort: 30082
  selector:
    ingress-app: sample2

---
apiVersion: v1
kind: Service
metadata:
  name: sample-ingress-default
spec:
  #  type: NodePort
  type: NodePort
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 8888
      targetPort: 80
      nodePort: 30083
  selector:
    ingress-app: default
